--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,4 @@ script:
   - make test
 after_success:
   - make docker_build
-after_success:
-  - PASSWORD=$DOCKER_PASSWORD make docker_build
+  - PASSWORD=$DOCKER_PASSWORD make docker_push
